[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vera-sdk"
version = "0.1.0"
description = "Python SDK for VeraLattice — Hedera AI lattice orchestration"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0,<0.29",
    "pydantic>=2.0,<3",
    "websockets>=12.0,<15",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "mypy>=1.8", "ruff>=0.3"]

[project.urls]
Homepage = "https://veralattice.com"
Repository = "https://github.com/veralattice/vera-sdk-py"

[tool.hatch.build.targets.wheel]
packages = ["src/vera_sdk"]
